--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-wikipedia-search></app-wikipedia-search>
+<!-- <app-wikipedia-search></app-wikipedia-search> -->
+<app-hero-search></app-hero-search>
